tests/suite/snapshots/suite__emit__tests__execute__allocate_save_across_mul.xi.snap
---
source: tests/suite/emit.rs
expression: lir_stdout
---
468374
29
28
27
26
25
24
23
22
21
20
19
18
17
16
15
14
13
12
11
10
9
8
7
6
5
4
3
2
1
0

