tests/suite/snapshots/suite__emit__tests__execute__allocate_save_across_multiple_return_call.xi.snap
---
source: tests/suite/emit.rs
expression: lir_stdout
---
9
8
7
6
5
4
3
2
1
0
9
8
7
6
5
4
3
2
1
0
9
8
7
6
5
4
3
2
1
0

