tests/suite/snapshots/suite__emit__tests__execute__arracc08.xi.snap
---
source: tests/suite/emit.rs
assertion_line: 31
expression: lir_stdout
---
Index: 4 2
Index: 4 2
8

