tests/suite/snapshots/suite__emit__tests__execute__arracc_04.xi.snap
---
source: tests/suite/emit.rs
expression: lir_stdout
---
Index: 0
Index: 0
0
Index: 0
Index: 1
1
Index: 0
Index: 2
2
Index: 0
Index: 3
3
Index: 1
Index: 0
1
Index: 1
Index: 1
2
Index: 1
Index: 2
3
Index: 1
Index: 3
4
Index: 2
Index: 0
2
Index: 2
Index: 1
3
Index: 2
Index: 2
4
Index: 2
Index: 3
5
Index: 3
Index: 0
3
Index: 3
Index: 1
4
Index: 3
Index: 2
5
Index: 3
Index: 3
6
Index: 4
Index: 0
4
Index: 4
Index: 1
5
Index: 4
Index: 2
6
Index: 4
Index: 3
7

