tests/suite/snapshots/suite__emit__tests__execute__array-decl-se.xi.snap
---
source: tests/suite/emit.rs
assertion_line: 31
expression: lir_stdout
---
Index: 0
Index: 1
Index: 0
3
4
4
4
4

