tests/suite/snapshots/suite__emit__tests__execute__assign09.xi.snap
---
source: tests/suite/emit.rs
assertion_line: 31
expression: lir_stdout
---
Index: 3
Index: 2
Index: 2
Index: 1
0
1
2
3
1
2
47
4
2
3
4
5
3
4
5
6
4
5
6
7

