tests/suite/snapshots/suite__emit__tests__execute__assign_10.xi.snap
---
source: tests/suite/emit.rs
expression: lir_stdout
---
Index: 4 2
Index: 4 2
0
1
2
3
1
2
3
4
2
3
4
5
3
4
5
6
4
5
47
7

